--- a/index.html
+++ b/index.html
@@ -231,39 +231,40 @@
   <canvas id="bg"></canvas>
   <main id="content" style="opacity: 1; margin-top: 0px;">
   <h1>
-  <div class="hex moved"></div><span>About the Dev</span></h1>
+  <div class="hex moved"></div><span>Información sobre mi:</span></h1>
   <div class="subtext" id="main">
-  <p>Mi nombre es María Herrera tengo 22 años de edad.</p>
-  <p>I wanted to be an engineer for most of my life. By the time I changed my mind about that, my liaison with the applied sciences had drastically altered my worldview already. This still informs much of my work and work ethic - design is no less
-  of a science in my eyes than physics or computing. (In other words, I like design as long as I can be a nerd about it.)</p>
+  <p>Mi nombre es María Herrera tengo 22 años de edad, soy Tecnóloga en Sistemas y actualmente curso el 4° ciclo de la carrera de Tecnologías de la Información en la UIDE Loja, me gusta mucho el mundo de la programación y todo lo que tenga que ver con tecnología. Mis estudios primarios y secundarios los curse en Unidad Educativa Calasanz.</p>
+  <p>Desde mis estudios secundarios empeze a tener gusto por la tecnología , me llamaba la atencion el mundo digital, el desarrollo de páginas web que me permitan conectar por el mundo, tengo una tecnolgía en sistemas en la cual reforce mis conocimientos de informática y redes , pero aspiro a seguir enriqueciendo mis conocimientos para ser una buena profesional</p>
   </div>
   <h2>
-  <div class="hex"></div><span>Skills</span></h2>
-  <div class="subtext coll">
-  A good grasp of object-oriented programming and computing-related math as a whole. Proficient in CSS3 and HTML5; making significant inroads into JavaScript and JQuery. Adobe Illustrator is both enjoyable for me and putty in my hands. <i>Putty.</i> In addition to my knowledge of coding, I also speak five human languages and am in the process of learning a few more.
-  </div>
   <h2>
   <div class="hex"></div><span>Hobbies &amp; Interests</span></h2>
   <div class="subtext coll">
-  Small indie coding projects (semi-professionally). Music (unprofessionally). Massively multiplayer online games (clumsily). Cooking (hungrily).
+  Dentro de mis actividades favoritas estan las de escuchar musica, cantar , jugar futbol y tambien me gusta mucho cocinar postres 
   </div>
   <h2>
-  <div class="hex"></div><span>Currently Working On</span></h2>
+  <div class="hex"></div><span>Capacitaciones - Experiencia Laboral</span></h2>
   <div class="subtext coll">
-  An accessibility app for Android, a couple of desktop themes for a blogging platform I casually use, and a photography project detailing the interplay of natural and artifical in urban environments.
+  Cloud Computing - google
+  Ciberseguridad - ITSDAB
+  Seminario de Informática - UIDE-LOJA
+
+  Municipio de Loja - Practicas Pre profesionales
+  Capacitadora curso de computacion básica - Bolsa global de empleo
+  Capacitadora curso de excel básico - Bolsa global de empleo
+  Onboarding/Maquetado - servicio web D-una/Rappi
   </div>
   <h2>
-  <div class="hex"></div><span>Find Me</span></h2>
+  <div class="hex"></div><span>Redes Sociales</span></h2>
   <div class="subtext coll">
-  <a>Twitter</a> | <a>Tumblr</a> | <a>Codepen</a> | <a>Behance</a>
+  <a>Twitter: Madesita05</a> | <a>Instagram:Madesita05</a> | <a>Git-Hub: Madesita</a> |
   </div>
   <h2>
-  <div class="hex"></div><span>Contact Me</span></h2>
+  <div class="hex"></div><span>Contáctame</span></h2>
   <div class="subtext coll">
   <ul>
-  <li>Phone: +12 345 678 90</li>
-  <li>E-mail: <a>lindeun@yahoo.com</a></li>
-  <li>Discord: <a>Laighlin#0371</a></li>
+  <li>Telefono:0969534156</li>
+  <li>E-mail: <a>madelos05.04@gmail.com</a></li>
   </ul>
   </div>
   </main>
