--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
   </div>
   <h2>
   <h2>
-  <div class="hex"></div><span>Hobbies &amp; Interests</span></h2>
-  <div class="subtext coll">
+    <div class="hex moved"></div><span>Información sobre mi:</span></h1>
+    <div class="subtext" id="main">
   Dentro de mis actividades favoritas estan las de escuchar musica, cantar , jugar futbol y tambien me gusta mucho cocinar postres 
   </div>
   <h2>
-  <div class="hex"></div><span>Capacitaciones - Experiencia Laboral</span></h2>
-  <div class="subtext coll">
+    <div class="hex moved"></div><span>Información sobre mi:</span></h1>
+    <div class="subtext" id="main">
   Cloud Computing - google
   Ciberseguridad - ITSDAB
   Seminario de Informática - UIDE-LOJA
@@ -255,13 +255,13 @@
   Onboarding/Maquetado - servicio web D-una/Rappi
   </div>
   <h2>
-  <div class="hex"></div><span>Redes Sociales</span></h2>
-  <div class="subtext coll">
+    <div class="hex moved"></div><span>Información sobre mi:</span></h1>
+    <div class="subtext" id="main">
   <a>Twitter: Madesita05</a> | <a>Instagram:Madesita05</a> | <a>Git-Hub: Madesita</a> |
   </div>
   <h2>
-  <div class="hex"></div><span>Contáctame</span></h2>
-  <div class="subtext coll">
+    <div class="hex moved"></div><span>Información sobre mi:</span></h1>
+    <div class="subtext" id="main">
   <ul>
   <li>Telefono:0969534156</li>
   <li>E-mail: <a>madelos05.04@gmail.com</a></li>
