--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
   </div>
   <h2>
   <h2>
-    <div class="hex moved"></div><span>Información sobre mi:</span></h1>
+    <div class="hex moved"></div><span>Hobbies:</span></h1>
     <div class="subtext" id="main">
   Dentro de mis actividades favoritas estan las de escuchar musica, cantar , jugar futbol y tambien me gusta mucho cocinar postres 
   </div>
   <h2>
-    <div class="hex moved"></div><span>Información sobre mi:</span></h1>
+    <div class="hex moved"></div><span>Capacitaciones - Experiencia Laboral:</span></h1>
     <div class="subtext" id="main">
   Cloud Computing - google
   Ciberseguridad - ITSDAB
@@ -255,12 +255,12 @@
   Onboarding/Maquetado - servicio web D-una/Rappi
   </div>
   <h2>
-    <div class="hex moved"></div><span>Información sobre mi:</span></h1>
+    <div class="hex moved"></div><span>Redes Sociales:</span></h1>
     <div class="subtext" id="main">
   <a>Twitter: Madesita05</a> | <a>Instagram:Madesita05</a> | <a>Git-Hub: Madesita</a> |
   </div>
   <h2>
-    <div class="hex moved"></div><span>Información sobre mi:</span></h1>
+    <div class="hex moved"></div><span>Contáctame:</span></h1>
     <div class="subtext" id="main">
   <ul>
   <li>Telefono:0969534156</li>
